# FunG_AD_Comparison

./: .gitattributes  .travis.yml  ADOL-C-2.6.1.tgz  README.md  do-configure  install-ad-libraries  project.config
FunG/: Doxyfile  Doxyfile.bak
comparison-with-ad-libraries/: README
comparison-with-ad-libraries/ex1/: CMakeLists.txt  compare.cpp  example.hh
comparison-with-ad-libraries/ex2/: CMakeLists.txt  compare.cpp  example.hh
comparison-with-ad-libraries/ex3/: CMakeLists.txt  compare.cpp  example.hh
